examples/core/errors/type_errors/05_constructor.output.txt

error[E0105]: Undefined constructor
  ┌─ input:6:18
4 │ // This example shows valid constructor syntax using Church encoding
5 │ // since full ADT support requires a prelude/type definition system
6 │ let some = x -> #Some(x) in
                     ^^^^
7 │ some(42)
8 │ 
  = hint: Constructor 'Some' is not defined

